k8s/local/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
  namespace: go-banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-api
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
        - name: banking-api
          image: go-banking-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: banking-api
  namespace: go-banking
spec:
  selector:
    app: banking-api
  ports:
    - port: 8080
      targetPort: 8080
